--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "~15.4.2",
     "react-dom": "~15.4.2",
     "react-router": "~3.2.0",
-    "redbox-react": "1.6.0"
+    "redbox-react": "1.6.0",
+    "react-loader-spinner": "2.1.0"
   },
   "devDependencies": {
     "enzyme": "~2.9.1",
