--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "karma-webpack": "2.0.1",
     "phantomjs-prebuilt": "~2.1.14",
     "react-addons-test-utils": "~15.6.2",
-    "react-dom": "^15.4.2",
+    "react-dom": "~15.4.2",
     "webpack-cli": "^2.0.10",
     "webpack-dev-server": "^2.11.1"
   },
